@@ -169,15 +169,17 @@ PRINT("++++++++++++ START %p classid=%d\n",me,me->classid);
 		status = me->getjob(me->getjobcls, &jobdesc, tid);
 		if (status > 0) {
 			/* run the job */
+			if (status == AFB_THREADS_EXEC) {
 PRINT("++++++++++++ TR run B%p classid=%d\n",me,me->classid);
-			jobdesc.run(jobdesc.job, tid);
+				jobdesc.run(jobdesc.job, tid);
+			}
 			x_mutex_lock(&mutex);
 		}
 		else {
 PRINT("++++++++++++ TR ??? B%p classid=%d\n",me,me->classid);
 			x_mutex_lock(&mutex);
 			if (me->active) {
-				if (status < 0)
+				if (status != AFB_THREADS_IDLE)
 					stop(me);
 				else {
 					/* no job, wait */
